--- a/src/sass-itcss/3-elements/_html.sass
+++ b/src/sass-itcss/3-elements/_html.sass
@@ -1,4 +1,3 @@
 html
     font-size: 16px
-    @media screen and (max-width: map_get($breakpoints-max, sm))
-        font-size: 14px
+    font-family: 'Helvetica Neue', sans-serif
